--- a/html/post.html
+++ b/html/post.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montez|Ubuntu+Mono|Roboto:wght@100&display=swap" rel="stylesheet"/>
 
     <!-- CSS for common header component -->
-    <link rel="stylesheet" type="text/css" href="../styles/common.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/general.css" />
 
     <!-- CSS for Post page -->
     <link rel="stylesheet" type="text/css" href="../styles/post.css" />
